--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -550,6 +550,11 @@
     "description": "Label for cost estimation button on dashboard",
     "context": "https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=57518-25657&t=12IIYBsZE7VQ2Gg0-4"
   },
+  "costEstimationEmptyMessage": "No estimation added. To add an estimation please click on add button",
+  "@costEstimationEmptyMessage": {
+    "description": "Empty state message shown when no cost estimations exist",
+    "context": "https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=57361-6529&t=KdmxnmJp7okhP1Bm-4"
+  },
   "projectLoadError": "Unable to load project",
   "@projectLoadError": {
     "description": "Error message shown when project fails to load",
