address ai review issues
feat: enhance cost estimation repository with caching and dispose method

remove // ignore: forbid_forced_unwrapping

remove comments from fake_estimation_repository.dart

feat: implement stream-based cost estimation watching and enhance authentication handling

feat: wire add estimation button to bloc

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -564,5 +564,15 @@
   "@projectLoadError": {
     "description": "Error message shown when project fails to load",
     "context": "N/A"
+  },
+  "untitledEstimation": "Untitled Estimation",
+  "@untitledEstimation": {
+    "description": "Default name for a newly created cost estimation",
+    "context": "N/A"
+  },
+  "userIdNotAvailable": "User ID is not available",
+  "@userIdNotAvailable": {
+    "description": "Error message shown when user ID is not available",
+    "context": "N/A"
   }
 }
