--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -548,6 +548,6 @@
   "costEstimation": "Cost Estimation",
   "@costEstimation": {
     "description": "Label for cost estimation button on dashboard",
-    "context": "Dashboard page button"
+    "context": "https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=57518-25657&t=12IIYBsZE7VQ2Gg0-4"
   }
 }
