--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -355,6 +355,16 @@
     "description": "Error message when password is required",
     "context": "N/A"
   },
+  "showPasswordLabel": "Show password",
+  "@showPasswordLabel": {
+    "description": "Accessibility label for password visibility toggle when password is hidden",
+    "context": "N/A"
+  },
+  "hidePasswordLabel": "Hide password",
+  "@hidePasswordLabel": {
+    "description": "Accessibility label for password visibility toggle when password is visible",
+    "context": "N/A"
+  },
   "passwordResetSuccessMessage": "Your password has been reset successfully!",
   "@passwordResetSuccessMessage": {
     "description": "Success message shown after password reset",
