--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -677,5 +677,15 @@
   "@unlockLabel": {
     "description": "Label for unlock action",
     "context": "https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=58002-53163&t=72cjZpZMiulKp3Yl-4https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=58002-53163&t=72cjZpZMiulKp3Yl-4"
+  },
+  "estimationMenuLabel": "Open menu for {estimationName}",
+  "@estimationMenuLabel": {
+    "description": "Label for estimation tile menu button",
+    "placeholders": {
+      "estimationName": {
+        "type": "String",
+        "example": "Kitchen Remodel"
+      }
+    }
   }
 }
