CA-485: register and create account pages a11y tests (#191)
* chore: add test, localization and CoreUI usage rules to PR review script (#125)

* Enhance review script with naming precision rules (#187)

* Enhance review script with naming precision rules

Added guidelines for naming conventions based on abstraction levels.

* Update rule title for code review criteria

* chore: add test, localization and CoreUI usage rules to PR review script (#125)


chore(CA-485): add a11y test setup

chore: add a11y test setup

* feat: Add accessibility testing utilities and dark theme support

- Introduced a new file `a11y_guidelines.dart` containing utilities for accessibility testing, including setup functions and assertions for tap target and text contrast guidelines.
- Added a dark theme creation function in `font_loader.dart` to support accessibility tests in both light and dark themes.

* chore: update ripplearc_coreui dependency to version 0.3.6 in pubspec.yaml and pubspec.lock

* chore: update ripplearc_coreui dependency to version 0.3.6 in pubspec.yaml and pubspec.lock

* feat: Enhance password visibility toggle with accessibility labels

- Added tooltip labels for password and confirm password visibility toggles in the create account page.
- Updated localization files to include "Show password" and "Hide password" labels for improved accessibility.

* feat: Add accessibility tests for CreateAccountPage and RegisterWithEmailPage

* CA-485: Password pages a11y tests (#192)

* test(auth): add a11y tests for password flow pages

* CA-485: feat cost estimation pages a11y tests (#193)

* Add a11y tests for cost estimation landing and details pages

* feat: Improve accessibility for cost estimation components

- Added Semantics and 48x48 tap target for estimation tile menu icon
- Wrapped add button in IntrinsicWidth on landing page
- Added estimationMenuLabel to app_en.arb
- Added a11y tests for landing and details pages
- Modified accessibility tests to ensure visibility and

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -355,6 +355,16 @@
     "description": "Error message when password is required",
     "context": "N/A"
   },
+  "showPasswordLabel": "Show password",
+  "@showPasswordLabel": {
+    "description": "Accessibility label for password visibility toggle when password is hidden",
+    "context": "N/A"
+  },
+  "hidePasswordLabel": "Hide password",
+  "@hidePasswordLabel": {
+    "description": "Accessibility label for password visibility toggle when password is visible",
+    "context": "N/A"
+  },
   "passwordResetSuccessMessage": "Your password has been reset successfully!",
   "@passwordResetSuccessMessage": {
     "description": "Success message shown after password reset",
@@ -667,5 +677,15 @@
   "@unlockLabel": {
     "description": "Label for unlock action",
     "context": "https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=58002-53163&t=72cjZpZMiulKp3Yl-4https://www.figma.com/design/vugaGpii5HfgEQHPbrS3mU/Construculator-Visual-Design?node-id=58002-53163&t=72cjZpZMiulKp3Yl-4"
+  },
+  "estimationMenuLabel": "Open menu for {estimationName}",
+  "@estimationMenuLabel": {
+    "description": "Label for estimation tile menu button",
+    "placeholders": {
+      "estimationName": {
+        "type": "String",
+        "example": "Kitchen Remodel"
+      }
+    }
   }
 }
