feat: add MembersPage and related localization strings
- Implement MembersPage with localization support for the members tab.
- Create MembersTestModule for testing purposes.
- Introduce CurrentProjectNotifierImpl to manage the current project state.
- Update ProjectModule to register CurrentProjectNotifier with an initial project ID.
- Add localization strings for navigation labels in app_en.arb and generated files.
- Create interfaces and fake implementations for CurrentProjectNotifier for testing.
- Update NoAuthGuard to redirect to the shell route.
- Add shell routes for navigation.
- Implement tests for AppShellBloc, AppBottomNavBar, AppShellPage, and tab navigation.
- Add tests for CalculationsPage and MembersPage to ensure proper rendering.
- Implement unit tests for CurrentProjectNotifierImpl and FakeCurrentProjectNotifier.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -687,5 +687,21 @@
         "example": "Kitchen Remodel"
       }
     }
+  },
+  "navHome": "Home",
+  "@navHome": {
+    "description": "Bottom navigation label for home tab"
+  },
+  "navCalculations": "Calculations",
+  "@navCalculations": {
+    "description": "Bottom navigation label for calculations tab"
+  },
+  "navCostEstimation": "Cost Estimation",
+  "@navCostEstimation": {
+    "description": "Bottom navigation label for cost estimation tab"
+  },
+  "navMembers": "Members",
+  "@navMembers": {
+    "description": "Bottom navigation label for members tab"
   }
 }
