feat: update bottom navigation localization by replacing individual tab labels with a single cost estimation tab

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -708,20 +708,9 @@
     "description": "Label for members tab in bottom navigation",
     "context": "AppShellPage"
   },
-  "navHome": "Home",
-  "@navHome": {
-    "description": "Bottom navigation label for home tab"
-  },
-  "navCalculations": "Calculations",
-  "@navCalculations": {
-    "description": "Bottom navigation label for calculations tab"
-  },
-  "navCostEstimation": "Cost Estimation",
-  "@navCostEstimation": {
-    "description": "Bottom navigation label for cost estimation tab"
-  },
-  "navMembers": "Members",
-  "@navMembers": {
-    "description": "Bottom navigation label for members tab"
+  "costEstimationTab": "Cost Estimation",
+  "@costEstimationTab": {
+    "description": "Label for cost estimation tab in bottom navigation",
+    "context": "AppShellPage"
   }
 }
